2007-07-22	kaffeetisch

	* t/GdkDisplay.t
	* xs/GdkDisplay.xs: Wrap gdk_display_supports_composite.

	* t/GdkPixbuf.t
	* xs/GdkPixbuf.xs: Wrap gdk_pixbuf_apply_embedded_orientation.

	* t/GdkWindow.t
	* xs/GdkWindow.xs: Wrap gdk_window_set_composited.

	* t/GtkIconView.t
	* xs/GtkIconView.xs: Wrap gtk_icon_view_set_tooltip_item,
	gtk_icon_view_set_tooltip_cell, gtk_icon_view_get_tooltip_context,
	gtk_icon_view_set_tooltip_column, and
	gtk_icon_view_get_tooltip_column.

	* t/GtkTooltip.t
	* xs/GtkTooltip.xs: Wrap gtk_tooltip_set_tip_area.

	* t/GtkTreeView.t
	* xs/GtkTreeView.xs: Wrap gtk_tree_view_set_tooltip_row,
	gtk_tree_view_set_tooltip_cell, gtk_tree_view_get_tooltip_context,
	gtk_tree_view_set_tooltip_column, and
	gtk_tree_view_get_tooltip_column.

	* t/PangoAttributes.t
	* xs/PangoAttributes.xs: Bless the array used to represent
	PangoColor so it becomes possible to call methods on it.
	Introduce some stack fiddling so you can use
	Gtk2::Pango::Color::to_string as a method and a class function.

	* xs/PangoMatrix.xs: Since pango uses GSlice starting with 1.12,
	use g_slice_new0 instead of g_new0 in Gtk2::Pango::Matrix::new
	when appropriate to avoid memory corruption.  (#458458, reported
	by Quentin Sculo)

2007-07-22	kaffeetisch

	* xs/PangoFont.xs: Don't prevent registering subclasses of
	PangoFont so that instances get their hierarchy set up correctly,
	especially wrt. interfaces.

	* maps_pango-1.18
	* t/PangoCairo.t
	* xs/PangoCairo.xs: Wrap pango_cairo_font_get_scaled_font.

2007-07-12	kaffeetisch

	* t/GtkIconView.t
	* xs/GtkIconView.xs: Wrap
	gtk_icon_view_convert_widget_to_bin_window_coords.

	* t/GtkMenuToolButton.t
	* xs/GtkMenuToolButton.xs: Wrap
	gtk_menu_tool_button_set_arrow_tooltip_text and
	gtk_menu_tool_button_set_arrow_tooltip_markup.

	* t/GtkToolItem.t
	* xs/GtkToolItem.xs: Wrap gtk_tool_item_set_tooltip_text and
	gtk_tool_item_set_tooltip_markup.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Wrap gtk_widget_set_has_tooltip and